// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GeometryViewport > renders side-view svg snapshot 1`] = `
<svg
  data-testid="geometry-svg-side"
  style="border: 1px solid rgb(209, 213, 219); border-radius: 8px; background: rgb(248, 250, 252);"
  viewBox="0 0 460 280"
  width="100%"
>
  <g>
    <polygon
      fill="#8b5cf6"
      fill-opacity="0.15"
      points="24,256 310.53935483870964,256 311.6025806451613,256 24,256"
      stroke="#8b5cf6"
      stroke-dasharray="4 3"
    />
    <text
      fill="#8b5cf6"
      font-size="10"
      x="171.53548387096774"
      y="256"
    >
      DOF
    </text>
  </g>
  <g>
    <line
      stroke="#0284c7"
      stroke-width="2"
      x1="24"
      x2="239.63548387096776"
      y1="256"
      y2="256"
    />
    <text
      fill="#0284c7"
      font-size="11"
      x="137.81774193548387"
      y="250"
    >
      Film
    </text>
  </g>
  <g>
    <line
      stroke="#475569"
      stroke-width="2"
      x1="24"
      x2="244.61935483870968"
      y1="256"
      y2="256"
    />
    <text
      fill="#475569"
      font-size="11"
      x="140.30967741935484"
      y="250"
    >
      Lens
    </text>
  </g>
  <g>
    <line
      stroke="#16a34a"
      stroke-dasharray="6 4"
      stroke-width="2"
      x1="24"
      x2="311.0709677419355"
      y1="256"
      y2="256"
    />
    <text
      fill="#16a34a"
      font-size="11"
      x="173.53548387096774"
      y="250"
    >
      Focus
    </text>
  </g>
  <g>
    <line
      stroke="#f59e0b"
      stroke-width="1.5"
      x1="24"
      x2="63.87096774193548"
      y1="256"
      y2="256"
    />
    <text
      fill="#f59e0b"
      font-size="10"
      x="49.935483870967744"
      y="266"
    >
      Optical axis
    </text>
  </g>
  <g>
    <circle
      cx="63.87096774193548"
      cy="256"
      fill="#dc2626"
      r="4"
    />
    <text
      fill="#dc2626"
      font-size="10"
      x="69.87096774193549"
      y="250"
    >
      Focus point
    </text>
  </g>
  <g>
    <circle
      cx="296.4516129032258"
      cy="178.66666666666669"
      fill="#0f766e"
      r="4"
    />
    <text
      fill="#0f766e"
      font-size="10"
      x="302.4516129032258"
      y="172.66666666666669"
    >
      building-mid-facade
    </text>
  </g>
</svg>
`;

exports[`GeometryViewport > renders top-view svg snapshot 1`] = `
<svg
  data-testid="geometry-svg-top"
  style="border: 1px solid rgb(209, 213, 219); border-radius: 8px; background: rgb(248, 250, 252);"
  viewBox="0 0 460 280"
  width="100%"
>
  <g>
    <polygon
      fill="#8b5cf6"
      fill-opacity="0.15"
      points="24,256 436,125.5798591172493 436,125.11408463601128 24,256"
      stroke="#8b5cf6"
      stroke-dasharray="4 3"
    />
    <text
      fill="#8b5cf6"
      font-size="10"
      x="234"
      y="190.67348593831514"
    >
      DOF
    </text>
  </g>
  <g>
    <line
      stroke="#0284c7"
      stroke-width="2"
      x1="230"
      x2="230"
      y1="256"
      y2="134.5741935483871"
    />
    <text
      fill="#0284c7"
      font-size="11"
      x="236"
      y="189.28709677419354"
    >
      Film
    </text>
  </g>
  <g>
    <line
      stroke="#475569"
      stroke-width="2"
      x1="271.1198315073832"
      x2="188.8801684926168"
      y1="256"
      y2="132.1068261393163"
    />
    <text
      fill="#475569"
      font-size="11"
      x="236"
      y="188.05341306965815"
    >
      Lens
    </text>
  </g>
  <g>
    <line
      stroke="#16a34a"
      stroke-dasharray="6 4"
      stroke-width="2"
      x1="24"
      x2="436"
      y1="256"
      y2="125.3469718766303"
    />
    <text
      fill="#16a34a"
      font-size="11"
      x="236"
      y="184.67348593831514"
    >
      Focus
    </text>
  </g>
  <g>
    <line
      stroke="#f59e0b"
      stroke-width="1.5"
      x1="230"
      x2="241.05371814714601"
      y1="256"
      y2="233.6395387644711"
    />
    <text
      fill="#f59e0b"
      font-size="10"
      x="241.526859073573"
      y="254.81976938223556"
    >
      Optical axis
    </text>
  </g>
  <g>
    <circle
      cx="241.05371814714601"
      cy="233.6395387644711"
      fill="#dc2626"
      r="4"
    />
    <text
      fill="#dc2626"
      font-size="10"
      x="247.05371814714601"
      y="227.6395387644711"
    >
      Focus point
    </text>
  </g>
  <g>
    <circle
      cx="60.04208179523134"
      cy="256"
      fill="#7c3aed"
      r="4"
    />
    <text
      fill="#7c3aed"
      font-size="10"
      x="66.04208179523134"
      y="250"
    >
      Hinge
    </text>
  </g>
  <g>
    <circle
      cx="230"
      cy="102.58064516129033"
      fill="#0f766e"
      r="4"
    />
    <text
      fill="#0f766e"
      font-size="10"
      x="236"
      y="96.58064516129033"
    >
      building-mid-facade
    </text>
  </g>
</svg>
`;
